# apm-pipeline-library

./: .backportrc.json  .editorconfig  .gitignore  .grenrc.js  .mergify.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .rspec  1  CHANGELOG.md  INTEGRATIONS.md  JENKINS.md  Jenkinsfile  README.md  Rakefile  catalog-info.yaml  gh.groovy  latest-versions.json  mvnw  pom.xml  pytest.ini  release.properties
.ci/: .bump-go-release-version.yml  .bump-stack-release-version.yml  .bump-stack-version.yml  .docker-images.schema.json  .docker-images.yml  .merge-queue.yaml  .weekly-tests-email.yml  .yamlint.yml  Jenkinsfile  beats-webhook.groovy  build-docker-images.groovy  buildBeatsDockerImages.groovy  buildDockerImages.groovy  bump-aliases.yml  bump-elastic-stack.yml  bump-go-release-version.sh  bump-golang.yml  bump-release-version.sh  bump-stack-release-version.sh  bump-test.yml  bumpGoReleaseVersion.groovy  bumpStackReleaseVersion.groovy  bumpStackVersion.groovy  chatops.groovy  dependabot.groovy  dockerImagesESLatest.groovy  dockerImagesOpbeans.groovy  fleet-ci-jobdsl-generator.groovy  fleet-ci-schedule-daily.groovy  generate-releases.sh  generate-snapshots.sh  get-next-minor-version.sh  github-comment.template  githubSyncupLabelsObsDev.groovy  jobDSL_generator.groovy  jobdsl-generator.groovy  licenseScan.groovy  licenseScanGenaral.groovy  licenseScanGeneral.groovy  merge-queue.groovy  (+7 more)
.github/: CODEOWNERS  dependabot.yml  paths-labeller.yml
docs/: CLOUD.md  CONTRIBUTING.md  DEVELOPMENT.md  GUIDELINES.md  INTERNAL_DOCKER_IMAGES.md  JENKINS_GUIDELINES.md  PRECOMMIT.md  RELEASE.md  STORAGE.md
jenkinsfile/: apm-server
local/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  jenkins_jobs.ini  opentelemetry-collector-exporter-elastic.yaml  test-jjbb.sh
resources/: JenkinsfileTemplate.groovy  build.json  buildDockerImages.groovy  buildKibana.groovy  ci-builds-mapping.json  ci-tests-mapping.json  commands-github-comment-markdown.template  comment-github-comment-markdown.template  custom-build-report-mapping.json  dockerImagesESLatest.groovy  dockerImagesOpbeans.groovy  errors_patterns.json  flakey-github-comment-markdown.template  flakey-github-issue.template  flakey-issue-template.template  flaky-github-comment-markdown.template  log.json  (+18 more)
resources/scripts/pytest_otel/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  mypy.ini  otel-collector.yaml  pyproject.toml  pytest_otel.py  requirements.txt  setup.cfg  setup.py  tox.ini
resources/scripts/pytest_otel/docs/demos/elastic/: README.md  demo.env  docker-compose.yml  elastic-stack.yml
resources/scripts/pytest_otel/docs/demos/elastic/elasticsearch/: roles.yml  users_roles
resources/scripts/pytest_otel/docs/demos/elastic/kibana/: kibana.yml
resources/scripts/pytest_otel/docs/demos/jaeger/: README.md  demo.env  docker-compose.yml
resources/scripts/pytest_otel/docs/demos/jaeger/config/: otel-collector-config.yaml
resources/scripts/pytest_otel/docs/demos/test/: test_demo.py
resources/scripts/pytest_otel/src/pytest_otel/: __init__.py
resources/scripts/pytest_otel/tests/: docker-compose.yml  it_tests_pytest_otel.py  otel-collector.yaml  test_pytest_otel.py
resources/scripts/pytest_otel/tests/it/: conftest.py  test_basic_plugin.py  test_failure_code_plugin.py  test_failure_plugin.py  test_skip_plugin.py  test_success_plugin.py  test_xfail_no_run_plugin.py  test_xfail_plugin.py
resources/scripts/pytest_otel/tests/it/utils/: __init__.py
(+1575 files in other folders)
