[build-system]
requires = ["setuptools >= 44.0.0", "wheel >= 0.30"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | _build
  | build
  | dist
  | elasticapm/utils/wrapt
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
