dependencies = [
    "opentelemetry-api==1.15.0",
    "opentelemetry-exporter-otlp==1.15.0",
    "opentelemetry-sdk==1.15.0",
    "pytest==7.1.3",
]

[build-system]
requires = ["setuptools >= 44.0.0", "wheel >= 0.30"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | _build
  | build
  | dist
  | elasticapm/utils/wrapt
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
