[metadata]
name = pytest_otel
description = pytest-otel report OpenTelemetry traces about test executed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elastic/apm-pipeline-library/tree/main/resources/scripts/pytest_otel
maintainer = Ivan Fernandez Calvo
version = 1.4.0
license = Apache-2.0
license_file = LICENSE.txt
platforms = any
classifiers =
    Environment :: Plugins
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = pytest, otel, opentelemetry, debug
project_urls =
    Source=https://github.com/elastic/apm-pipeline-library/tree/main/resources/scripts/pytest_otel
    Tracker=https://github.com/elastic/apm-pipeline-library/issues

[options]
packages = find:
install_requires =
    opentelemetry-api==1.15.0
    opentelemetry-exporter-otlp==1.15.0
    opentelemetry-sdk==1.22.0
    pytest==7.2.1
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
pytest11 = otel = pytest_otel

[options.extras_require]
test =
    coverage>=5

[options.package_data]
pytest_otel = py.typed

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[flake8]
max-line-length = 120
ignore = F401, H301, E203, SC200, SC100, W503
exclude = .venv,.git,__pycache__,.tox,.mypy_cache

[coverage:run]
source =
    ${_COVERAGE_SRC}
    ${_COVERAGE_TEST}
parallel = True
branch = True
dynamic_context = test_function

[coverage:report]
fail_under = 100
skip_covered = true
show_missing = true
omit =
    tests/example.py

[coverage:html]
show_contexts = True
skip_covered = False
skip_empty = False

[coverage:paths]
source =
    src
    .tox*/*/lib/python*/site-packages
    .tox*/pypy*/site-packages
    .tox*\*\Lib\site-packages\
    */src
    *\src

[tool:pytest]
addopts = -ra --showlocals -vv
testpaths = tests
xfail_strict = True
junit_family = xunit2
